--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+a{
+    color: inherit;
+    background-color: none;
+    text-decoration: none;
+
+}
